// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-result-component when called in an existing project should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "N3PrGyO2QUfOb9pDbRVMehuq9Gg=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "mQ01UqLa1O+LLDFKh19dakth40w=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "EpKK14CXyjrSNQsuEEKqSalxDxE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "I+1b5N1kyPbt/73pkZi5tRoAt68=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                    HashedFile {
                      "hash": "xP4FebG8AhkGm5G5892sV4YgrI4=",
                      "name": "readme.md",
                    },
                  ],
                  "hash": "kBuPHHOR70Cwg3Dk7FWer5liJwA=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "lzjqN0n57PdtAXeQlPyhR993F6c=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "8/If7Va9KqTo3A/nsg4/G7mNCNc=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "lu3AAIE2uuVfiNhezMGSn+9ANSI=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "srl+MXtlsY+t1WTNAFPbpe7Llzc=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-result-component when called with a component name without hyphen should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "N3PrGyO2QUfOb9pDbRVMehuq9Gg=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "x6zSZEAo83omSLe0BmKMVzGhSIk=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "DHc1UOzcvrRyRP7cNfkhee0USQE=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "bBaaDceapg0y5AjIvm6Qiia9piQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "cemLwF0AfwrkO0N833yxjsgC868=",
              "name": "atomic-nohypen",
            },
          ],
          "hash": "0qzyw4JomNriTj2Vf8pah/jg5Pc=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "70Sx81WPpGh8BXld1NC3WtWOZ0Y=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "JwiOD2OUUjJlqZjhSeZOp/Xd7qw=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called with a valid component name should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "N3PrGyO2QUfOb9pDbRVMehuq9Gg=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "I0rtaH5GENYpGP2jbsMlsBi4SCQ=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "ShFXwot8XbCjD/A7x/1LQ0+hYI4=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "pFuu6S9wb+y09faE9Lxub6t+cfY=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "kfbx9bGWsmkgNNs9kTRqExj+S+0=",
              "name": "valid-component-name",
            },
          ],
          "hash": "adtHCNV+vpXymSZdW/7bNRM42Uc=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "PRWH/BNx1x/uI4LMKp7Tthd5ux0=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "//X3CwKz46+392SNiXaB79z1FlU=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called without any args should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "N3PrGyO2QUfOb9pDbRVMehuq9Gg=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "2ghFLv08dK1QRKnOB7aX1Gr2ipg=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "sample-result-component.css",
                    },
                    HashedFile {
                      "hash": "DMYROzP/GYB/aoia+R5JUflx37w=",
                      "name": "sample-result-component.tsx",
                    },
                  ],
                  "hash": "zQmeniXwoag2rYtOWGtLO1oiwlQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "DbNjK9GR56OkzGunjEvRysl6wBc=",
              "name": "sample-result-component",
            },
          ],
          "hash": "SQxmj70wQStos6LgyUYj84egdkA=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "lDJaAbsUJsSqQhlqO9mMBYDC62U=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "z0nX/IQhWaWjioWtzgv4VGbvzAU=",
  "name": "no-args",
}
`;
